# 模拟题

# 美团
add_executable(meituan_solution1 meituan/solution1.cpp)
add_executable(meituan_solution2 meituan/solution2.cpp)
add_executable(meituan_solution3 meituan/solution3.cpp)
add_executable(meituan_solution4 meituan/solution4.cpp)

# 百度2020校招第三批
add_executable(baidu_2020_xiaozhao3_solution1 baidu/2020_xiaozhao3_solution1.cpp)
add_executable(baidu_2020_xiaozhao3_solution2 baidu/2020_xiaozhao3_solution2.cpp)