# 模拟题

# 美团
add_executable(meituan_solution1 meituan/solution1.cpp)
add_executable(meituan_solution2 meituan/solution2.cpp)
add_executable(meituan_solution3 meituan/solution3.cpp)
add_executable(meituan_solution4 meituan/solution4.cpp)

# 百度2020校招第三批
add_executable(baidu_2020_xiaozhao3_solution1 baidu/2020_xiaozhao3_solution1.cpp)
add_executable(baidu_2020_xiaozhao3_solution2 baidu/2020_xiaozhao3_solution2.cpp)

# 华为
# 练习1
add_executable(huawei_practice1_solution1 huawei/practice1/solution1.cpp)
add_executable(huawei_practice1_solution2 huawei/practice1/solution2.cpp)
add_executable(huawei_practice1_solution3 huawei/practice1/solution3.cpp)
