# 模拟题

# 阿里巴巴
# 练习1
add_executable(alibaba_practice1_solution1 alibaba/practice1/solution1.cpp)
add_executable(alibaba_practice1_solution2 alibaba/practice1/solution2.cpp)

# 百度
# 2020校招第三批
add_executable(baidu_2020_xiaozhao3_solution1 baidu/2020_xiaozhao3_solution1.cpp)
add_executable(baidu_2020_xiaozhao3_solution2 baidu/2020_xiaozhao3_solution2.cpp)

# 字节跳动
# 联系1
add_executable(bytedance_practice1_solution1 bytedance/practice1/solution1.cpp)
add_executable(bytedance_practice1_solution2 bytedance/practice1/solution2.cpp)

# 美团
add_executable(meituan_solution1 meituan/solution1.cpp)
add_executable(meituan_solution2 meituan/solution2.cpp)
add_executable(meituan_solution3 meituan/solution3.cpp)
add_executable(meituan_solution4 meituan/solution4.cpp)

# 华为
# 练习1
add_executable(huawei_practice1_solution1 huawei/practice1/solution1.cpp)
add_executable(huawei_practice1_solution2 huawei/practice1/solution2.cpp)
add_executable(huawei_practice1_solution3 huawei/practice1/solution3.cpp)

# 金山
# 练习1
add_executable(jinshan_practice1_solution1 jinshan/practice1/solution1.cpp)
add_executable(jinshan_practice1_solution2 jinshan/practice1/solution2.cpp)
add_executable(jinshan_practice1_solution3 jinshan/practice1/solution3.cpp)

# 腾讯
# 练习1
add_executable(tencent_practice1_solution1 tencent/practice1/solution1.cpp)
add_executable(tencent_practice1_solution2 tencent/practice1/solution2.cpp)
add_executable(tencent_practice1_solution3 tencent/practice1/solution3.cpp)
add_executable(tencent_practice1_solution4 tencent/practice1/solution4.cpp)
